--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                <div class="rowg-3">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                        <label for="" class="form-label">USERNAME</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                        <label for="" class="form-label">PASSWORD</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
